# bazel-cpp

./: .bazelrc  .dockerignore  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  gtest.BUILD
.github/workflows/: amd64_docker.yml  amd64_docker_bazel.yml  amd64_docker_cmake.yml  amd64_linux.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_macos_bazel.yml  linux.yml  macos.yml  windows.yml
Bar/: BUILD.bazel
Foo/: BUILD.bazel
FooBar/: BUILD.bazel
FooBarApp/: BUILD.bazel
app/: BUILD.bazel  main.cc
bar/: BUILD.bazel  bar.cc  bar_test.cc
bazel/docker/archlinux/: Dockerfile
bazel/docker/opensuse/: Dockerfile
bazel/docker/ubuntu/: Dockerfile
bazel/docs/: docker.dot
ci/: Makefile
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
examples/: BUILD.bazel  example.cc
foo/: BUILD.bazel  foo.cc  foo_test.cc
foobar/: BUILD.bazel  foobar.cc  foobar.h  foobar_test.cc
main/: BUILD.bazel
test/: BUILD.bazel
