load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "bar",
  srcs = ["bar.cc"],
  hdrs = ["bar.h"],
  #strip_include_prefix = "include",
  visibility = ["//visibility:public"],
)

cc_test(
  name = "bar_test",
  srcs = ["bar_test.cc"],
  #copts = ["-Iexternal/gtest/include"],
  deps = [
    "@com_google_googletest//:gtest_main",
    ":bar",
  ],
)
