load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "foobar",
  srcs = ["foobar.cc"],
  hdrs = ["foobar.h"],
  #strip_include_prefix = "include",
  deps = [
    "//bar:bar",
    "//foo:foo",
  ],
  visibility = ["//visibility:public"],
)

cc_test(
  name = "foobar_test",
  srcs = ["foobar_test.cc"],
  #copts = ["-Iexternal/gtest/include"],
  deps = [
    "@googletest//:gtest_main",
    ":foobar",
  ],
)
